# monorepo-cci

./: .coveragerc  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.circleci/: config.yml
src/: @orb.yml
src/commands/: merge-configs.yml  prepare-pipeline-files.yml  preprocess-modules-file.yml
src/common/description/: base-revision.txt  continue-config.txt  default-modules.txt  default-params.txt  get-base-from-github.txt  mappings.txt  max-age.txt  modules-path.txt  params-path.txt
src/examples/: setup_and_continue_default.yml  setup_and_continue_find_base.yml  setup_without_continue.yml
src/executors/: python.yml
src/jobs/: setup-and-continue.yml  setup-without-continue.yml
src/scripts/: merge_configs.sh  prepare_files.py  prepare_modules.py
src/tests/: conftest.py  merge_configs.bats  test_prepare_files.py  test_prepare_modules.py
src/tests/bats/.github/workflows/: release_dockerhub.yml  tests.yml
src/tests/data/json/: gh_pr_resp.json
src/tests/data/txt/: modules.txt  modules_all.txt  set_modules_multiple_modules_different_names.txt  set_modules_single_module_foo.txt  set_modules_two_modules_same_name.txt
src/tests/data/yaml/: combined-with-duplicates.yaml  custom-config.yaml  first.yaml  second.yaml  third.yaml
