[tool.poetry]
name = "monorepo-cciccc"
version = "0.1.0"
description = ""
authors = ["naviat <haidv.ict@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-git = "^1.7.0"
pytest-cov = "^3.0.0"
types-requests = "^2.26.3"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"